RESOLVED FIXED291610
Badging.Origin is a constant failure with site isolation enabled
https://bugs.webkit.org/show_bug.cgi?id=291610
Summary Badging.Origin is a constant failure with site isolation enabled
Brady Eidson
Reported 2025-04-15 19:27:47 PDT
Badging.Origin is a constant failure with site isolation enabled
Attachments
Radar WebKit Bug Importer
Comment 1 2025-04-15 19:27:57 PDT
Brady Eidson
Comment 2 2025-04-15 19:35:14 PDT
EWS
Comment 3 2025-04-16 10:33:58 PDT
Committed 293759@main (65d1d0d96076): <https://commits.webkit.org/293759@main> Reviewed commits have been landed. Closing PR #44135 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.