Badging.Origin is a constant failure with site isolation enabled rdar://149354580 https://bugs.webkit.org/show_bug.cgi?id=291610

Reviewed by Alex Christensen.

This was a classic case of an isolated frame web content process being confused about
which web page identifier was the right one to use.

And fixing it was a chance to rearchitect the message to target frames instead of pages,
as frame identifiers are now global and not confused across processes.

The patch is mostly client and IPC plumbing changes to support this.

* Source/WebCore/Modules/badge/BadgeClient.h:
* Source/WebCore/Modules/badge/EmptyBadgeClient.h:
* Source/WebCore/page/Navigator.cpp:
(WebCore::Navigator::setAppBadge):
* Source/WebKit/UIProcess/WebFrameProxy.cpp:
(WebKit::WebFrameProxy::setAppBadge):
* Source/WebKit/UIProcess/WebFrameProxy.h:
* Source/WebKit/UIProcess/WebFrameProxy.messages.in:
* Source/WebKit/UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::unwrapCryptoKey):
(WebKit::WebProcessProxy::setAppBadgeFromWorker):
(WebKit::WebProcessProxy::setAppBadge): Deleted.
* Source/WebKit/UIProcess/WebProcessProxy.h:
* Source/WebKit/UIProcess/WebProcessProxy.messages.in:
* Source/WebKit/WebProcess/WebCoreSupport/WebBadgeClient.cpp:
(WebKit::WebBadgeClient::setAppBadge):
* Source/WebKit/WebProcess/WebCoreSupport/WebBadgeClient.h:
* Source/WebKit/WebProcess/WebPage/WebFrame.cpp:
(WebKit::WebFrame::setAppBadge):
* Source/WebKit/WebProcess/WebPage/WebFrame.h:
* Source/WebKit/WebProcess/WebProcess.cpp:
(WebKit::WebProcess::setAppBadge):
* Source/WebKit/WebProcess/WebProcess.h:

Canonical link: https://commits.webkit.org/293759@main